Fix HTML formatting and add closing tags

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
     <footer class="footer">
         <p> &copy; 2026 Studio A Hair Design. Todos os direitos reservados. </p>
-        <p> Desenvolvido por <a href="https://www.linkedin.com/in/humbertt" target="_blank">
+        <p> Desenvolvido por <a href="https://www.linkedin.com/in/humberttgomes/" target="_blank">
             <i class="fab fa-linkedin"></i> Humbertt Gomes </a>
         </p>
 
@@ -218,4 +218,5 @@
     </a>
 <script src="app.js"></script>
 </body>
+
 </html>
